--- a/Chroma.Audio.Sfxr/Chroma.Audio.Sfxr.csproj
+++ b/Chroma.Audio.Sfxr/Chroma.Audio.Sfxr.csproj
@@ -2,10 +2,22 @@
 
     <PropertyGroup>
         <TargetFramework>net5.0</TargetFramework>
+        <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
+        <PackageLicenseExpression>MIT</PackageLicenseExpression>
+    </PropertyGroup>
+
+    <PropertyGroup>
+        <Title>Chroma SFXR Playback Engine</Title>
+        <Description>Sfxr playback engine for Chroma Framework</Description>
+        <PackageId>Chroma.Audio.Sfxr</PackageId>
         <Version>1.0.0</Version>
+        <Authors>Ciastex</Authors>
+        <RepositoryType>git</RepositoryType>
+        <RepositoryUrl>https://github.com/Chroma-2D/Chroma.Audio.Sfxr</RepositoryUrl>
+        <PackageTags>gamedev;engine;2d;chroma;framework;sdl;opengl;game;xna;netcore;sfxr;audio;</PackageTags>
     </PropertyGroup>
 
     <ItemGroup>
-      <PackageReference Include="Chroma" Version="0.32.0" />
+        <PackageReference Include="Chroma" Version="0.32.0"/>
     </ItemGroup>
 </Project>
