--- a/Chroma.Audio.Sfxr/Chroma.Audio.Sfxr.csproj
+++ b/Chroma.Audio.Sfxr/Chroma.Audio.Sfxr.csproj
@@ -18,6 +18,10 @@
     </PropertyGroup>
 
     <ItemGroup>
-        <PackageReference Include="Chroma" Version="0.43.0"/>
+        <PackageReference Include="Chroma" Version="0.45.0"/>
+    </ItemGroup>
+    
+    <ItemGroup>
+        <AssemblyAttribute Include="Chroma.Extensibility.ChromaExtensionAttribute" />
     </ItemGroup>
 </Project>
